--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
       with:
-        ref: dev-master
+        ref: master
         fetch-depth: 0
         lfs: true
         
@@ -49,7 +49,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
       with:
-        ref: dev-19.07
+        ref: master
         fetch-depth: 0
         lfs: true
         
@@ -69,7 +69,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
       with:
-        ref: dev-lean-lede
+        ref: master
         fetch-depth: 0
         lfs: true
         
